--- a/NetworkMonitor/NetworkMonitor/NetworkMonitor.csproj
+++ b/NetworkMonitor/NetworkMonitor/NetworkMonitor.csproj
@@ -41,6 +41,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -52,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Config.cs" />
     <Compile Include="Controller.cs" />
     <Compile Include="CSDeskBand.cs" />
     <Compile Include="Deskband.cs" />
